examples/errors/extends_cycle.ik
type Foo class extends Bar:
    fn foo(Self) ()

type Bar class extends Foo:
    fn bar(Self) Int

fn main():
    print("\n")
